GCodeParser.py
# Generated from GCode.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class GCodeParser ( Parser ):

    grammarFileName = "GCode.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'%'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'+'", "'-'", 
                     "'.'", "<INVALID>", "'['", "']'", "'**'", "'/'", "<INVALID>", 
                     "'*'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'#'", "'='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "A", "B", "C", "D", "E", 
                      "F", "G", "H", "I", "J", "K", "L", "M", "N", "O", 
                      "P", "Q", "R", "S", "T", "U", "V", "W", "X", "Y", 
                      "Z", "PLUS", "MINUS", "DECIMAL_POINT", "DIGIT", "LEFT_BRACKET", 
                      "RIGHT_BRACKET", "POWER", "DIVIDED_BY", "MODULO", 
                      "TIMES", "LOGICAL_AND", "EXCLUSIVE_OR", "NON_EXCLUSIVE_OR", 
                      "ABSOLUTE_VALUE", "ARC_COSINE", "ARC_SINE", "COSINE", 
                      "E_RAISED_TO", "FIX_DOWN", "FIX_UP", "NATURAL_LOG_OF", 
                      "ROUND_OPERATION", "SINE", "SQUARE_ROOT", "TANGENT", 
                      "ARC_TANGENT", "PARAMETER_SIGN", "EQUAL_SIGN", "COMMENT", 
                      "EOL", "WS" ]

    RULE_ngcfile = 0
    RULE_program = 1
    RULE_line = 2
    RULE_block_delete = 3
    RULE_line_number = 4
    RULE_segment = 5
    RULE_mid_line_word = 6
    RULE_mid_line_letter = 7
    RULE_real_value = 8
    RULE_real_number = 9
    RULE_expression = 10
    RULE_binary_operation = 11
    RULE_binary_operation1 = 12
    RULE_binary_operation2 = 13
    RULE_binary_operation3 = 14
    RULE_unary_combo = 15
    RULE_ordinary_unary_combo = 16
    RULE_ordinary_unary_operation = 17
    RULE_arc_tangent_combo = 18
    RULE_parameter_setting = 19
    RULE_parameter_value = 20
    RULE_parameter_index = 21
    RULE_comment = 22

    ruleNames =  [ "ngcfile", "program", "line", "block_delete", "line_number", 
                   "segment", "mid_line_word", "mid_line_letter", "real_value", 
                   "real_number", "expression", "binary_operation", "binary_operation1", 
                   "binary_operation2", "binary_operation3", "unary_combo", 
                   "ordinary_unary_combo", "ordinary_unary_operation", "arc_tangent_combo", 
                   "parameter_setting", "parameter_value", "parameter_index", 
                   "comment" ]

    EOF = Token.EOF
    T__0=1
    A=2
    B=3
    C=4
    D=5
    E=6
    F=7
    G=8
    H=9
    I=10
    J=11
    K=12
    L=13
    M=14
    N=15
    O=16
    P=17
    Q=18
    R=19
    S=20
    T=21
    U=22
    V=23
    W=24
    X=25
    Y=26
    Z=27
    PLUS=28
    MINUS=29
    DECIMAL_POINT=30
    DIGIT=31
    LEFT_BRACKET=32
    RIGHT_BRACKET=33
    POWER=34
    DIVIDED_BY=35
    MODULO=36
    TIMES=37
    LOGICAL_AND=38
    EXCLUSIVE_OR=39
    NON_EXCLUSIVE_OR=40
    ABSOLUTE_VALUE=41
    ARC_COSINE=42
    ARC_SINE=43
    COSINE=44
    E_RAISED_TO=45
    FIX_DOWN=46
    FIX_UP=47
    NATURAL_LOG_OF=48
    ROUND_OPERATION=49
    SINE=50
    SQUARE_ROOT=51
    TANGENT=52
    ARC_TANGENT=53
    PARAMETER_SIGN=54
    EQUAL_SIGN=55
    COMMENT=56
    EOL=57
    WS=58

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class NgcfileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOL(self, i:int=None):
            if i is None:
                return self.getTokens(GCodeParser.EOL)
            else:
                return self.getToken(GCodeParser.EOL, i)

        def program(self):
            return self.getTypedRuleContext(GCodeParser.ProgramContext,0)


        def EOF(self):
            return self.getToken(GCodeParser.EOF, 0)

        def getRuleIndex(self):
            return GCodeParser.RULE_ngcfile

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNgcfile" ):
                listener.enterNgcfile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNgcfile" ):
                listener.exitNgcfile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNgcfile" ):
                return visitor.visitNgcfile(self)
            else:
                return visitor.visitChildren(self)




    def ngcfile(self):

        localctx = GCodeParser.NgcfileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_ngcfile)
        try:
            self.state = 67
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 46
                self.match(GCodeParser.T__0)
                self.state = 47
                self.match(GCodeParser.EOL)
                self.state = 48
                self.program()
                self.state = 49
                self.match(GCodeParser.T__0)
                self.state = 50
                self.match(GCodeParser.EOL)
                self.state = 54
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
                while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1+1:
                        self.state = 51
                        self.matchWildcard() 
                    self.state = 56
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

                self.state = 57
                self.match(GCodeParser.EOF)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 59
                self.match(GCodeParser.T__0)
                self.state = 60
                self.match(GCodeParser.EOL)
                self.state = 61
                self.program()
                self.state = 62
                self.match(GCodeParser.EOF)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 64
                self.program()
                self.state = 65
                self.match(GCodeParser.EOF)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GCodeParser.LineContext)
            else:
                return self.getTypedRuleContext(GCodeParser.LineContext,i)


        def getRuleIndex(self):
            return GCodeParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = GCodeParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << GCodeParser.A) | (1 << GCodeParser.B) | (1 << GCodeParser.C) | (1 << GCodeParser.D) | (1 << GCodeParser.E) | (1 << GCodeParser.F) | (1 << GCodeParser.G) | (1 << GCodeParser.H) | (1 << GCodeParser.I) | (1 << GCodeParser.J) | (1 << GCodeParser.K) | (1 << GCodeParser.L) | (1 << GCodeParser.M) | (1 << GCodeParser.N) | (1 << GCodeParser.O) | (1 << GCodeParser.P) | (1 << GCodeParser.Q) | (1 << GCodeParser.R) | (1 << GCodeParser.S) | (1 << GCodeParser.T) | (1 << GCodeParser.U) | (1 << GCodeParser.V) | (1 << GCodeParser.W) | (1 << GCodeParser.X) | (1 << GCodeParser.Y) | (1 << GCodeParser.Z) | (1 << GCodeParser.DIVIDED_BY) | (1 << GCodeParser.PARAMETER_SIGN) | (1 << GCodeParser.COMMENT) | (1 << GCodeParser.EOL))) != 0):
                self.state = 69
                self.line()
                self.state = 74
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOL(self):
            return self.getToken(GCodeParser.EOL, 0)

        def block_delete(self):
            return self.getTypedRuleContext(GCodeParser.Block_deleteContext,0)


        def line_number(self):
            return self.getTypedRuleContext(GCodeParser.Line_numberContext,0)


        def segment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GCodeParser.SegmentContext)
            else:
                return self.getTypedRuleContext(GCodeParser.SegmentContext,i)


        def getRuleIndex(self):
            return GCodeParser.RULE_line

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLine" ):
                listener.enterLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLine" ):
                listener.exitLine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLine" ):
                return visitor.visitLine(self)
            else:
                return visitor.visitChildren(self)




    def line(self):

        localctx = GCodeParser.LineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_line)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==GCodeParser.DIVIDED_BY:
                self.state = 75
                self.block_delete()


            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==GCodeParser.N:
                self.state = 78
                self.line_number()


            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << GCodeParser.A) | (1 << GCodeParser.B) | (1 << GCodeParser.C) | (1 << GCodeParser.D) | (1 << GCodeParser.E) | (1 << GCodeParser.F) | (1 << GCodeParser.G) | (1 << GCodeParser.H) | (1 << GCodeParser.I) | (1 << GCodeParser.J) | (1 << GCodeParser.K) | (1 << GCodeParser.L) | (1 << GCodeParser.M) | (1 << GCodeParser.O) | (1 << GCodeParser.P) | (1 << GCodeParser.Q) | (1 << GCodeParser.R) | (1 << GCodeParser.S) | (1 << GCodeParser.T) | (1 << GCodeParser.U) | (1 << GCodeParser.V) | (1 << GCodeParser.W) | (1 << GCodeParser.X) | (1 << GCodeParser.Y) | (1 << GCodeParser.Z) | (1 << GCodeParser.PARAMETER_SIGN) | (1 << GCodeParser.COMMENT))) != 0):
                self.state = 81
                self.segment()
                self.state = 86
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 87
            self.match(GCodeParser.EOL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Block_deleteContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DIVIDED_BY(self):
            return self.getToken(GCodeParser.DIVIDED_BY, 0)

        def getRuleIndex(self):
            return GCodeParser.RULE_block_delete

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock_delete" ):
                listener.enterBlock_delete(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock_delete" ):
                listener.exitBlock_delete(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock_delete" ):
                return visitor.visitBlock_delete(self)
            else:
                return visitor.visitChildren(self)




    def block_delete(self):

        localctx = GCodeParser.Block_deleteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_block_delete)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(GCodeParser.DIVIDED_BY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Line_numberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def N(self):
            return self.getToken(GCodeParser.N, 0)

        def DIGIT(self, i:int=None):
            if i is None:
                return self.getTokens(GCodeParser.DIGIT)
            else:
                return self.getToken(GCodeParser.DIGIT, i)

        def getRuleIndex(self):
            return GCodeParser.RULE_line_number

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLine_number" ):
                listener.enterLine_number(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLine_number" ):
                listener.exitLine_number(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLine_number" ):
                return visitor.visitLine_number(self)
            else:
                return visitor.visitChildren(self)




    def line_number(self):

        localctx = GCodeParser.Line_numberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_line_number)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(GCodeParser.N)
            self.state = 92
            self.match(GCodeParser.DIGIT)
            self.state = 94
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 93
                self.match(GCodeParser.DIGIT)


            self.state = 97
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 96
                self.match(GCodeParser.DIGIT)


            self.state = 100
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 99
                self.match(GCodeParser.DIGIT)


            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==GCodeParser.DIGIT:
                self.state = 102
                self.match(GCodeParser.DIGIT)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SegmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mid_line_word(self):
            return self.getTypedRuleContext(GCodeParser.Mid_line_wordContext,0)


        def parameter_setting(self):
            return self.getTypedRuleContext(GCodeParser.Parameter_settingContext,0)


        def comment(self):
            return self.getTypedRuleContext(GCodeParser.CommentContext,0)


        def getRuleIndex(self):
            return GCodeParser.RULE_segment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSegment" ):
                listener.enterSegment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSegment" ):
                listener.exitSegment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSegment" ):
                return visitor.visitSegment(self)
            else:
                return visitor.visitChildren(self)




    def segment(self):

        localctx = GCodeParser.SegmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_segment)
        try:
            self.state = 108
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [GCodeParser.A, GCodeParser.B, GCodeParser.C, GCodeParser.D, GCodeParser.E, GCodeParser.F, GCodeParser.G, GCodeParser.H, GCodeParser.I, GCodeParser.J, GCodeParser.K, GCodeParser.L, GCodeParser.M, GCodeParser.O, GCodeParser.P, GCodeParser.Q, GCodeParser.R, GCodeParser.S, GCodeParser.T, GCodeParser.U, GCodeParser.V, GCodeParser.W, GCodeParser.X, GCodeParser.Y, GCodeParser.Z]:
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.mid_line_word()
                pass
            elif token in [GCodeParser.PARAMETER_SIGN]:
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.parameter_setting()
                pass
            elif token in [GCodeParser.COMMENT]:
                self.enterOuterAlt(localctx, 3)
                self.state = 107
                self.comment()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Mid_line_wordContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mid_line_letter(self):
            return self.getTypedRuleContext(GCodeParser.Mid_line_letterContext,0)


        def real_value(self):
            return self.getTypedRuleContext(GCodeParser.Real_valueContext,0)


        def getRuleIndex(self):
            return GCodeParser.RULE_mid_line_word

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMid_line_word" ):
                listener.enterMid_line_word(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMid_line_word" ):
                listener.exitMid_line_word(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMid_line_word" ):
                return visitor.visitMid_line_word(self)
            else:
                return visitor.visitChildren(self)




    def mid_line_word(self):

        localctx = GCodeParser.Mid_line_wordContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_mid_line_word)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.mid_line_letter()
            self.state = 111
            self.real_value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Mid_line_letterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def A(self):
            return self.getToken(GCodeParser.A, 0)

        def B(self):
            return self.getToken(GCodeParser.B, 0)

        def C(self):
            return self.getToken(GCodeParser.C, 0)

        def D(self):
            return self.getToken(GCodeParser.D, 0)

        def E(self):
            return self.getToken(GCodeParser.E, 0)

        def F(self):
            return self.getToken(GCodeParser.F, 0)

        def G(self):
            return self.getToken(GCodeParser.G, 0)

        def H(self):
            return self.getToken(GCodeParser.H, 0)

        def I(self):
            return self.getToken(GCodeParser.I, 0)

        def J(self):
            return self.getToken(GCodeParser.J, 0)

        def K(self):
            return self.getToken(GCodeParser.K, 0)

        def L(self):
            return self.getToken(GCodeParser.L, 0)

        def M(self):
            return self.getToken(GCodeParser.M, 0)

        def O(self):
            return self.getToken(GCodeParser.O, 0)

        def P(self):
            return self.getToken(GCodeParser.P, 0)

        def Q(self):
            return self.getToken(GCodeParser.Q, 0)

        def R(self):
            return self.getToken(GCodeParser.R, 0)

        def S(self):
            return self.getToken(GCodeParser.S, 0)

        def T(self):
            return self.getToken(GCodeParser.T, 0)

        def U(self):
            return self.getToken(GCodeParser.U, 0)

        def V(self):
            return self.getToken(GCodeParser.V, 0)

        def W(self):
            return self.getToken(GCodeParser.W, 0)

        def X(self):
            return self.getToken(GCodeParser.X, 0)

        def Y(self):
            return self.getToken(GCodeParser.Y, 0)

        def Z(self):
            return self.getToken(GCodeParser.Z, 0)

        def getRuleIndex(self):
            return GCodeParser.RULE_mid_line_letter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMid_line_letter" ):
                listener.enterMid_line_letter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMid_line_letter" ):
                listener.exitMid_line_letter(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMid_line_letter" ):
                return visitor.visitMid_line_letter(self)
            else:
                return visitor.visitChildren(self)




    def mid_line_letter(self):

        localctx = GCodeParser.Mid_line_letterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_mid_line_letter)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << GCodeParser.A) | (1 << GCodeParser.B) | (1 << GCodeParser.C) | (1 << GCodeParser.D) | (1 << GCodeParser.E) | (1 << GCodeParser.F) | (1 << GCodeParser.G) | (1 << GCodeParser.H) | (1 << GCodeParser.I) | (1 << GCodeParser.J) | (1 << GCodeParser.K) | (1 << GCodeParser.L) | (1 << GCodeParser.M) | (1 << GCodeParser.O) | (1 << GCodeParser.P) | (1 << GCodeParser.Q) | (1 << GCodeParser.R) | (1 << GCodeParser.S) | (1 << GCodeParser.T) | (1 << GCodeParser.U) | (1 << GCodeParser.V) | (1 << GCodeParser.W) | (1 << GCodeParser.X) | (1 << GCodeParser.Y) | (1 << GCodeParser.Z))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Real_valueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def real_number(self):
            return self.getTypedRuleContext(GCodeParser.Real_numberContext,0)


        def expression(self):
            return self.getTypedRuleContext(GCodeParser.ExpressionContext,0)


        def parameter_value(self):
            return self.getTypedRuleContext(GCodeParser.Parameter_valueContext,0)


        def unary_combo(self):
            return self.getTypedRuleContext(GCodeParser.Unary_comboContext,0)


        def getRuleIndex(self):
            return GCodeParser.RULE_real_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReal_value" ):
                listener.enterReal_value(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReal_value" ):
                listener.exitReal_value(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReal_value" ):
                return visitor.visitReal_value(self)
            else:
                return visitor.visitChildren(self)




    def real_value(self):

        localctx = GCodeParser.Real_valueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_real_value)
        try:
            self.state = 119
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [GCodeParser.PLUS, GCodeParser.MINUS, GCodeParser.DECIMAL_POINT, GCodeParser.DIGIT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 115
                self.real_number()
                pass
            elif token in [GCodeParser.LEFT_BRACKET]:
                self.enterOuterAlt(localctx, 2)
                self.state = 116
                self.expression()
                pass
            elif token in [GCodeParser.PARAMETER_SIGN]:
                self.enterOuterAlt(localctx, 3)
                self.state = 117
                self.parameter_value()
                pass
            elif token in [GCodeParser.ABSOLUTE_VALUE, GCodeParser.ARC_COSINE, GCodeParser.ARC_SINE, GCodeParser.COSINE, GCodeParser.E_RAISED_TO, GCodeParser.FIX_DOWN, GCodeParser.FIX_UP, GCodeParser.NATURAL_LOG_OF, GCodeParser.ROUND_OPERATION, GCodeParser.SINE, GCodeParser.SQUARE_ROOT, GCodeParser.TANGENT, GCodeParser.ARC_TANGENT]:
                self.enterOuterAlt(localctx, 4)
                self.state = 118
                self.unary_combo()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Real_numberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DIGIT(self, i:int=None):
            if i is None:
                return self.getTokens(GCodeParser.DIGIT)
            else:
                return self.getToken(GCodeParser.DIGIT, i)

        def DECIMAL_POINT(self):
            return self.getToken(GCodeParser.DECIMAL_POINT, 0)

        def PLUS(self):
            return self.getToken(GCodeParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(GCodeParser.MINUS, 0)

        def getRuleIndex(self):
            return GCodeParser.RULE_real_number

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReal_number" ):
                listener.enterReal_number(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReal_number" ):
                listener.exitReal_number(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReal_number" ):
                return visitor.visitReal_number(self)
            else:
                return visitor.visitChildren(self)




    def real_number(self):
